# WinGL-Vulkan

./: .gitignore  CMakeLists.txt  WinGL.sln
AutoScale/: AutoScaleWindow.cpp  AutoScaleWindow.h  CMakeLists.txt  Main.cpp
CubeMap/: CFont.cpp  CFont.h  CFrameBuffer.cpp  CFrameBuffer.h  CMakeLists.txt  CModel.h  CModel3DS.cpp  CModel3DS.h  CPBuffer.cpp  CPBuffer.h  CSphere.cpp  CSphere.h  CubeMapWindow.cpp  CubeMapWindow.h  Main.cpp  SkyBox.cpp  SkyBox.h  StdIncludes.h  Types.h
CubeMap/Images/: Font.tga
CubeMap/Images/Canberra3DS/: BAC Canberra B(I)8.3DS  Flying Canberra B(I)8.3DS
DOFTransform/: CMakeLists.txt  DOFTransformWindow.cpp  DOFTransformWindow.h  Main.cpp
Displacement/: CMakeLists.txt  DisplacementWindow.cpp  DisplacementWindow.h  Main.cpp
Displacement/displacement/shaders/: terrain_tess.frag  terrain_tess.geom  terrain_tess.tctrl  terrain_tess.teval  (+1 more)
GLStudioTest/component/: CMakeLists.txt  component.cpp  component.h  component_impl.cpp  component_impl.h
Instancing/: CMakeLists.txt  InstancingWindow.cpp  InstancingWindow.h  Main.cpp  Shaders.h  buildings.frag  fragment.frag  trees.frag  trees.geom  trees.rgb  trees.vert  vertex.vert
MultisampleFramebuffer/: CMakeLists.txt  Main.cpp  MultisampleFramebufferWindow.cpp  MultisampleFramebufferWindow.h
NormalMapping/: CMakeLists.txt  Main.cpp  NormalMappingWindow.cpp  NormalMappingWindow.h  normal_mapping_dir_light.frag  normal_mapping_dir_light.vert  normal_mapping_flat_shader.frag  normal_mapping_flat_shader.vert  normal_mapping_lighting.glsl  normal_mapping_normal_shader.frag  normal_mapping_normal_shader.vert
Planets/: CMakeLists.txt  Earth.cpp  Earth.h  Main.cpp  Planet.cpp  Planet.h  PlanetsWindow.cpp  PlanetsWindow.h  earth.frag  planet.frag  planet.vert  sun.frag
ProjectiveTexturing/: CMakeLists.txt  Main.cpp  ProjectiveTextureWindow.cpp  ProjectiveTextureWindow.h  ProjectiveTexturing.vcproj  ProjectiveTexturing.vcxproj  ProjectiveTexturing.vcxproj.filters  projective_texture.frag  projective_texture.vert  viz_projective_texture.frag  viz_projective_texture.vert
RenderTarget/: CMakeLists.txt  Main.cpp  RenderTarget.vcxproj  RenderTarget.vcxproj.filters  RenderTargetWindow.cpp  RenderTargetWindow.h
ShadowMap/: CMakeLists.txt  Main.cpp  ShadowMap.vcxproj  ShadowMap.vcxproj.filters  ShadowMapWindow.cpp  ShadowMapWindow.h  enterprise.frag  enterprise.vert  enterprise_display_shadow.frag  enterprise_display_shadow.vert  enterprise_normal.frag  enterprise_normal.geom  enterprise_normal.vert  enterprise_shadow.vert
ShadowMap/enterprise/: Read Me - TOS Enterprise - Max9 - 3DS.txt  TAS Bump.tif  TAS Diff.tif  TAS Spec.tif  TBS Bump.tif  TBS Bump2.tif  TBS Bump2_NORM.tif  TBS Bump_NORM.tif  TBS Diff.tif  TBS Spec.tif  TCS Bump.tif  TCS Bump_NORM.tif  TCS Diff.tif  TCS Spec.tif  TDS Bump.tif  TDS Bump_NORM.tif  TDS Diff.tif  TDS Spec.tif  TES Bump.tif  TES Bump_NORM.tif  TES Diff.tif  TFS Diff.tif  TFS Spec.tif  TGS Diff.tif  TGS Spec.tif  THS Diff .tif  TIS Diff.tif  TIS Mask.tif  TJS.tif  TKS Diff.tif  TKS SlfIllum.tif  TKS Spec.tif  TLS Alpha.tif  TLS Diff.tif
ShadowMap/enterprise-e/: 1701e_hull_7.3ds  1701e_saucer_down_5.3ds  1701e_saucer_top_6.3ds  Yacht_body.3ds  Yacht_wings_down.3ds  Yacht_wings_up.3ds  credit.txt
SliderControl/: CMakeLists.txt  Main.cpp  SliderControlWindow.cpp  SliderControlWindow.h
SmokeParticleSystem/: CMakeLists.txt  Main.cpp  ParticleSystem.cpp  ParticleSystemManager.cpp  Smoke.rgb  SmokeParticleSystem.cpp  SmokeParticleSystem.h  SmokeParticleSystem.vcproj  SmokeParticleSystem.vcxproj  SmokeParticleSystem.vcxproj.filters  SmokeParticleSystemWindow.cpp  SmokeParticleSystemWindow.h
TessellationTriangle/: CMakeLists.txt  Main.cpp  TessellationTriangleWindow.cpp  TessellationTriangleWindow.h  triangle.frag  triangle.tctrl  triangle.teval  triangle.vert
Tower/: ABC.rgb  CFont.cpp  CMakeLists.txt  Font.tga  Main.cpp  PressSpace.rgb  TowerWindow.cpp  TowerWindow.h
TransformFeedback/: CMakeLists.txt  Main.cpp  TransformFeedbackWindow.cpp  TransformFeedbackWindow.h  transform_feedback.frag  transform_feedback.geom  transform_feedback.vert  transform_feedback_gen.geom  transform_feedback_gen.vert  transform_feedback_vis.frag  transform_feedback_vis.vert
Vulkan/applications/: CMakeLists.txt  project.vcxproj.user.in
Vulkan/ext-src/: CMakeLists.txt
WinGL/: AllocConsole.cpp  CMakeLists.txt  Camera.h  FrameBufferObject.cpp  FrameBufferObject.h  GeomHelper.cpp  GeomHelper.h  MathHelper.h  Matrix.h  MatrixHelper.h  OpenGLExtensions.cpp  OpenGLExtensions.h  OpenGLWindow.cpp  OpenGLWindow.h  Pipeline.cpp  Pipeline.h  Quaternion.h  QueryObject.cpp  QueryObject.h  ReadTexture.cpp  ReadTexture.h  ReuseAllocator.h  ShaderProgram.cpp  ShaderProgram.h  Shaders.cpp  Shaders.h  Singleton.h  Texture.cpp  Texture.h  Timer.h  TransformFeedbackObject.cpp  TransformFeedbackObject.h  Vector.h  Vector3.h  Vector4.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  WglAssert.cpp  (+8 more)
WinGL/CameraPolicies/: RoamNoRollRestrictPitch.h  RoamNoRollRestrictPitch.inl
WinGL/ProjectiveTexturing/: BMLogo.rgb  Gradient.rgb  Main.cpp  ProjectiveTextureWindow.cpp  ProjectiveTextureWindow.h  ProjectiveTexturing.vcproj  ProjectiveTexturing.vcproj.vspscc
WinGL/SmokeParticleSystem/: Main.cpp  Particle.h  ParticleSystem.h  ParticleSystemManager.h  SimFrame.h  SmokeParticleSystem.h  SmokeParticleSystem.vcproj  SmokeParticleSystem.vcproj.vspscc  SmokeParticleSystemWindow.cpp
WinGL/WinGL/: AllocConsole.cpp  AllocConsole.h  Matrix.h  MatrixHelper.h  OpenGLExtensions.cpp  OpenGLExtensions.h  OpenGLWindow.cpp  OpenGLWindow.h  ReadTexture.cpp  Vector.h  WglAssert.h  WinGL.vcproj  WinGL.vcproj.vspscc  Window.cpp
WindowlessRender/: CMakeLists.txt  Main.cpp  WindowlessRenderWindow.cpp  WindowlessRenderWindow.h
ext-src/: CMakeLists.txt
ext-src/ResIL-1.8.2/: CMakeLists.txt
ext-src/assimp-3.0.1270/: CMakeLists.txt
ext-src/assimp-3.1.1/: CMakeLists.txt
ext-src/cmake-modules/: FindZLIB.cmake
ext-src/glew-1.11.0/: CMakeLists.txt
ext-src/glew-1.9.0/: CMakeLists.txt
(+127 files in other folders)
